# LabProject

./: TestFile.cpp
LabProject/: CMakeLists.txt  File.cpp  File.h  LoadFile.cpp  LoadFile.h  Observer.h  Subject.h  Window.cpp  Window.h  main.cpp
LabProject/test/: CMakeLists.txt  TestLoadFile.cpp  TestObserver.cpp  runAllTests.cpp
